Update chat to scroll on new message and resize main div height auto

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -81,3 +81,17 @@ body {
     border-bottom: 0;
   }
 }
+
+
+/* Added syles */
+.messageArea {
+  overflow-y: scroll;
+}
+
+.messageArea li {
+  list-style: none;
+}
+
+
+
+
