--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,7 @@ body {
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
 }
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
@@ -46,6 +47,7 @@ body {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
+
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
@@ -55,6 +57,7 @@ body {
 .marketing {
   margin: 40px 0;
 }
+
 .marketing p + h4 {
   margin-top: 28px;
 }
@@ -72,26 +75,54 @@ body {
     padding-left: 0;
     padding-right: 0;
   }
+
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
   }
+
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
 }
 
-
 /* Added syles */
-.messageArea {
+.chat .messageArea {
   overflow-y: scroll;
+  padding-left: 0;
 }
 
-.messageArea li {
+.chat .messageArea li {
   list-style: none;
 }
 
+.chat .author {
+  font-weight: bold;
+}
 
+.chat .message {
+  float: left;
+  width: 100%;
+}
 
+.chat .message.grey {
+  background-color: #eeeeee;
+}
 
+.chat .message .time {
+  color: #888888;
+  float: right;
+}
+
+.chat .textareaParent {
+  text-align: center;
+}
+
+.chat .textareaParent>textarea {
+  width: 100%;
+}
+
+.chat h2 {
+  margin: 0;
+}
