[MAP] Create map part dans subscribe to locations while user on the screen
Add ngmap to bowerfile
Change grunt serve config hostname to '0.0.0.0' to access the server from outside

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,7 +20,7 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 }
 
 /* Make the masthead heading the same height as the navigation */
@@ -33,7 +33,7 @@ body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
+  padding-top: 1px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
@@ -119,10 +119,65 @@ body {
   text-align: center;
 }
 
-.chat .textareaParent>textarea {
+.chat .textareaParent > textarea {
   width: 100%;
 }
 
 .chat h2 {
   margin: 0;
 }
+
+/*
+Override bootstrap BEGIN
+*/
+.navbar {
+  margin-bottom: 5px;
+}
+/*
+Override bootstrap END
+*/
+
+
+/**
+map part BEGIN
+*/
+.custom-marker {
+  font-size: 1em;
+  padding: 3px;
+  background: #fff;
+  border-radius: 4px;
+  border: #7F7F7F solid 1px;
+  text-align: center;
+}
+
+.custom-marker:after {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 7px 6px 0;
+  border-color: #fff transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  margin-left: -6px;
+  bottom: -6px;
+  left: 50%;
+}
+
+.custom-marker:before {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 7px 6px 0;
+  border-color: #7F7F7F transparent;
+  display: block;
+  width: 0;
+  z-index: 0;
+  margin-left: -6px;
+  bottom: -7px;
+  left: 50%;
+}
+
+/**
+map part END
+*/
