--- a/app/views/event.html
+++ b/app/views/event.html
@@ -1,1 +1,55 @@
-<p>This is the event view.</p>
+<div class="event">
+  <form name="eventFrom" ng-submit="editEvent();">
+    <div class="form-group">
+      <label for="name">Nom</label>
+      <input type="text" required class="form-control" id="name" placeholder="Nom" ng-model="eventB.name"/>
+    </div>
+    <div class="form-group">
+      <label for="date">Date et heure :</label>
+      <input type="datetime-local" class="form-control" id="date" placeholder="Date" ng-model="eventB.date" required/>
+    </div>
+    <div class="form-group">
+      <label for="location">Lieu :</label>
+      <input ng-autocomplete  type="text" class="form-control" id="location" placeholder="Lieu" ng-model="eventB.location" required/>
+      <a ng-href="https://www.google.fr/maps/search/{{eventB.location | encodeURI}}" target="_blank">Ouvrir sur Google Maps</a>
+    </div>
+    <div class="form-group">
+      <label for="date">Description :</label>
+      <textarea class="form-control" rows="5" ng-model="eventB.description" maxlength="500"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="flagOnlyBitchizz">Only Bitchizz ?
+        <input type="checkbox" id="flagOnlyBitchizz" ng-model="eventB.isOnlyBitchizz"/>
+      </label>
+    </div>
+    <button type="submit" class="btn btn-default">Modifier</button>
+  </form>
+
+
+  <h2>Commentaires :</h2>
+
+  <div class="chat">
+    <ul id="messages" ng-show="eventB.comments.length" class="messageArea" ng-style="{height : heightChat +'px'}" scroll-glue>
+      <li ng-repeat="message in eventB.comments">
+        <br clear="all"/>
+
+        <div ng-show="messages[$index - 1].author != message.author">
+          <span class="author">{{message.author}}</span>
+        </div>
+
+        <div class="message" ng-class="$index%2 == 0 ? 'grey' : ''">
+          <span ng-bind-html="message.text | nl2br"></span>
+
+          <div class="time" ng-show="messages[$index - 1].timestamp != message.timestamp">{{message.timestamp*1000 |
+            date:'dd/MM HH:mm:ss'}}
+          </div>
+        </div>
+        <hr style="margin:0;" ng-show="$index != 0 && messages[$index - 1].author != message.author"/>
+      </li>
+    </ul>
+    <div class="textareaParent">
+      <textarea placeholder="Message..." ng-keyup="onKeyUp($event)"></textarea>
+    </div>
+  </div>
+
+</div>
