--- a/app/views/events.html
+++ b/app/views/events.html
@@ -1,5 +1,13 @@
 <div class="events">
 
+
+  <h2>Evenements : </h2>
+
+  <div ng-repeat="(key, event) in eventsBitchizz">
+    <a href="#/event/{{key}}">{{event.date | date:'dd/MM/yyyy HH:mm'}} -
+      {{event.name}} ({{event.location}})</a>
+  </div>
+
   <h2>Créer un event</h2>
 
   <p class="alert alert-danger" ng-show="err">{{err}}</p>
@@ -16,7 +24,7 @@
     </div>
     <div class="form-group">
       <label for="location">Lieu :</label>
-      <input type="text" class="form-control" id="location" placeholder="Lieu" ng-model="event.location" required/>
+      <input ng-autocomplete type="text" class="form-control" id="location" placeholder="Lieu" ng-model="event.location" required/>
     </div>
     <div class="form-group">
       <label for="date">Description :</label>
@@ -24,14 +32,9 @@
     </div>
     <div class="form-group">
       <label for="flagOnlyBitchizz">Only Bitchizz ?
-      <input type="checkbox" id="flagOnlyBitchizz" ng-model="event.isOnlyBitchizz" />
+        <input type="checkbox" id="flagOnlyBitchizz" ng-model="event.isOnlyBitchizz"/>
       </label>
     </div>
     <button type="submit" class="btn btn-default">Créer</button>
   </form>
-
-  <h2>Evenements : </h2>
-  <a ng-repeat="event in eventsBitchizz" href="#/event/{{$index}}">{{event.date | date:'yyyy/MM/dd HH:mm'}} -
-    {{event.name}}</a>
-
 </div>
