[LOGIN] Fix main page first login error

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
 <p class="alert alert-danger" ng-show="err">{{err}}</p>
 
 <div ng-show="! isConnected">
-  <button  class="btn btn-primary" ng-click="oauthLogin('facebook')">Connexion avec Facebook</button>
+  <a  class="btn btn-primary" href="#/login">Connexion avec Facebook</a>
   <br />
   <br />
   <br />
