--- a/app/views/account.html
+++ b/app/views/account.html
@@ -1,35 +1,38 @@
-<div class="row-fluid">
-  <div class="col-md-12">
-    <h3>Profile
-    </h3>
+<div class="account">
+  <div class="row-fluid">
+    <div class="col-md-12">
+      <h3>Profile
+      </h3>
 
-    <form role="form">
-      <p class="form-group">
-        <label>Account ID</label>
-        <br/>{{user.uid}}
+      <form role="form">
+        <p class="form-group">
+          <label>Account ID</label>
+          <br/>{{user.uid}}
+        </p>
+
+        <p class="form-group">
+          <label>Name:</label>
+          <br/>{{profile.name}}
+        </p>
+
+        <p class="form-group">
+          <label>Photo:</label>
+          <img ng-src="{{profile.profileImageURL}}" width="50" height="50"/>
+        </p>
+
+        <p class="form-group">
+          <label>Email:</label>
+          <input type="email" name="email" ng-model="profile.email" class="form-control"/>
+        </p>
+      </form>
+
+      <p>
+        <button role="button" ng-click="logout()" class="btn btn-danger">Log Out</button>
       </p>
+    </div>
 
-      <p class="form-group">
-        <label>Name:</label>
-        <br/>{{profile.name}}
-      </p>
-
-      <p class="form-group">
-        <label>Photo:</label>
-        <img ng-src="{{profile.profileImageURL}}" width="50" height="50"/>
-      </p>
-
-      <p class="form-group">
-        <label>Email:</label>
-        <input type="email" name="email" ng-model="profile.email" class="form-control"/>
-      </p>
-    </form>
-
-    <p>
-      <button role="button" ng-click="logout()" class="btn btn-danger">Log Out</button>
-    </p>
   </div>
+  <p class="clearfix"></p>
 
+  <div ng-repeat="message in messages" class="alert alert-{{message.type}}">{{message.text}}</div>
 </div>
-<p class="clearfix"></p>
-<div ng-repeat="message in messages" class="alert alert-{{message.type}}">{{message.text}}</div>
