--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,12 @@
-<h1>Bitchizz App</h1>
+<div class="home">
+  <h1>Bitchizz App</h1>
 
-<p class="alert alert-danger" ng-show="err">{{err}}</p>
+  <p class="alert alert-danger" ng-show="err">{{err}}</p>
 
-<div ng-show="! isConnected">
-  <a  class="btn btn-primary" href="#/login">Connexion avec Facebook</a>
-  <br />
-  <br />
-  <br />
+  <div ng-show="! isConnected">
+    <a class="btn btn-primary" href="#/login">Connexion avec Facebook</a>
+    <br/>
+    <br/>
+    <br/>
+  </div>
 </div>
