--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -2,7 +2,7 @@
   <h2>Chat</h2>
 
 
-  <ul id="messages" ng-show="messages.length" class="messageArea" ng-style="{height : heightChat +'px'}" scroll-glue>
+  <ul id="messages" ng-click="clearNewMessage()" ng-show="messages.length" class="messageArea" ng-style="{height : heightChat +'px'}" scroll-glue>
     <li ng-repeat="message in messages">
       <br clear="all"/>
 
@@ -21,7 +21,7 @@
     </li>
   </ul>
   <div class="textareaParent">
-  <textarea placeholder="Message..." ng-keyup="onKeyUp($event)"></textarea>
+  <textarea placeholder="Message..." ng-keyup="onKeyUp($event)" ng-click="clearNewMessage()"></textarea>
   </div>
 </div>
 <p class="alert alert-danger" ng-show="err">{{err}}</p>
