--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,9 +1,11 @@
-<h2>Login Page</h2>
+<div class="login">
+  <h2>Login Page</h2>
 
-<p class="alert alert-danger" ng-show="err">{{err}}</p>
+  <p class="alert alert-danger" ng-show="err">{{err}}</p>
 
-<button class="btn btn-primary" ng-click="oauthLogin('facebook')">Se connecter avec Facebook</button>
+  <button class="btn btn-primary" ng-click="oauthLogin('facebook')">Se connecter avec Facebook</button>
 
-<br/>
-<br/>
-<br/>
+  <br/>
+  <br/>
+  <br/>
+</div>
