--- a/app/views/event.html
+++ b/app/views/event.html
@@ -67,7 +67,7 @@
         Répondre <span class="caret"></span>
       </button>
       <ul uib-dropdown-menu role="menu">
-        <li><a ng-click="participate('going')">Je serais là !</a></li>
+        <li><a ng-click="participate('going')">Je serai là !</a></li>
         <li><a ng-click="participate('mayBe')">Ça dépendra de ma soeur.</a></li>
         <li role="separator" class="divider"></li>
         <li><a ng-click="participate('notGoing')">Je ne peux pas venir.</a></li>
